--- a/Lab_8/package.json
+++ b/Lab_8/package.json
@@ -1,9 +1,15 @@
 {
-    "name": "trabucco_lab8",
-    "version": "1.0.0",
-    "description": "My first package",
-    "author": "Ted Trabucco",
-    "dependencies": {
-        "express": "^4.17.1"
-    }
+  "name": "lab_8",
+  "version": "1.0.0",
+  "description": "My first package i hope it works",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Ted Trabucco",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
